Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.9.2
-
None
Description
C# generator will produce invalid code for this
struct CsFail {
1: optional bool read
2: optional bool write
}
this will generate code that that will not compile, due to name clash between :
public bool Read
{
get
set
{ __isset.@read = true; this._read = value; }}
and Read method implementation
public void Read (TProtocol iprot)
Attachments
Attachments
Issue Links
- relates to
-
THRIFT-2508 Uncompileable C# code due to language keywords in IDL
-
- Closed
-