THRIFT-2942 CSharp generate invalid code for property named read or write Client: C# Patch: Jens Geyer